[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/assets/heart.png" type="Texture" id=1]
[ext_resource path="res://scenes/LifeCounter.gd" type="Script" id=2]
[ext_resource path="res://resources/sfx/hurt.wav" type="AudioStream" id=3]

[node name="LifeCounter" type="Node2D"]
script = ExtResource( 2 )

[node name="life1" type="Sprite" parent="."]
position = Vector2( 72, 56 )
texture = ExtResource( 1 )

[node name="life2" type="Sprite" parent="."]
position = Vector2( 88, 56 )
texture = ExtResource( 1 )

[node name="life3" type="Sprite" parent="."]
position = Vector2( 104, 56 )
texture = ExtResource( 1 )

[node name="life4" type="Sprite" parent="."]
position = Vector2( 120, 56 )
texture = ExtResource( 1 )

[node name="life5" type="Sprite" parent="."]
position = Vector2( 136, 56 )
texture = ExtResource( 1 )

[node name="life6" type="Sprite" parent="."]
position = Vector2( 152, 56 )
texture = ExtResource( 1 )

[node name="life7" type="Sprite" parent="."]
position = Vector2( 168, 56 )
texture = ExtResource( 1 )

[node name="life8" type="Sprite" parent="."]
position = Vector2( 184, 56 )
texture = ExtResource( 1 )

[node name="life9" type="Sprite" parent="."]
position = Vector2( 200, 56 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.0
